--- a/CourseWork/CourseWork.csproj
+++ b/CourseWork/CourseWork.csproj
@@ -17,6 +17,21 @@
     <Deterministic>true</Deterministic>
     <NuGetPackageImportStamp>
     </NuGetPackageImportStamp>
+    <PublishUrl>publish\</PublishUrl>
+    <Install>true</Install>
+    <InstallFrom>Disk</InstallFrom>
+    <UpdateEnabled>false</UpdateEnabled>
+    <UpdateMode>Foreground</UpdateMode>
+    <UpdateInterval>7</UpdateInterval>
+    <UpdateIntervalUnits>Days</UpdateIntervalUnits>
+    <UpdatePeriodically>false</UpdatePeriodically>
+    <UpdateRequired>false</UpdateRequired>
+    <MapFileExtensions>true</MapFileExtensions>
+    <ApplicationRevision>0</ApplicationRevision>
+    <ApplicationVersion>1.0.0.%2a</ApplicationVersion>
+    <IsWebBootstrapper>false</IsWebBootstrapper>
+    <UseApplicationTrust>false</UseApplicationTrust>
+    <BootstrapperEnabled>true</BootstrapperEnabled>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -81,28 +96,28 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
-    <Compile Include="DataBase\Users.cs">
-      <DependentUpon>GuitaerHelperDBModel.tt</DependentUpon>
-    </Compile>
-    <Compile Include="Resource\Lib\Classes\ConnectedClass.cs" />
-    <Compile Include="DataBase\GuitaerHelperDBModel.Context.cs">
+    <Compile Include="DataBase\GuitarHelperDBModel.Context.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
-      <DependentUpon>GuitaerHelperDBModel.Context.tt</DependentUpon>
+      <DependentUpon>GuitarHelperDBModel.Context.tt</DependentUpon>
     </Compile>
-    <Compile Include="DataBase\GuitaerHelperDBModel.cs">
+    <Compile Include="DataBase\GuitarHelperDBModel.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
-      <DependentUpon>GuitaerHelperDBModel.tt</DependentUpon>
+      <DependentUpon>GuitarHelperDBModel.tt</DependentUpon>
     </Compile>
-    <Compile Include="DataBase\GuitaerHelperDBModel.Designer.cs">
+    <Compile Include="DataBase\GuitarHelperDBModel.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
-      <DependentUpon>GuitaerHelperDBModel.edmx</DependentUpon>
+      <DependentUpon>GuitarHelperDBModel.edmx</DependentUpon>
     </Compile>
     <Compile Include="DataBase\Songs.cs">
-      <DependentUpon>GuitaerHelperDBModel.tt</DependentUpon>
+      <DependentUpon>GuitarHelperDBModel.tt</DependentUpon>
     </Compile>
+    <Compile Include="DataBase\Users.cs">
+      <DependentUpon>GuitarHelperDBModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Resource\Lib\Classes\ConnectedClass.cs" />
     <Compile Include="Resource\Lib\Classes\Autocorrelator.cs" />
     <Compile Include="Resource\Lib\Classes\Pitch.cs" />
     <Compile Include="Resource\Lib\Classes\Sound.cs" />
@@ -136,9 +151,6 @@
     </Compile>
     <Compile Include="Resource\Pages\TunnerPage.xaml.cs">
       <DependentUpon>TunnerPage.xaml</DependentUpon>
-    </Compile>
-    <Compile Include="Resource\UI\Tuners\GuitarTuner.xaml.cs">
-      <DependentUpon>GuitarTuner.xaml</DependentUpon>
     </Compile>
     <Compile Include="Windows\MetronomeWin.xaml.cs">
       <DependentUpon>MetronomeWin.xaml</DependentUpon>
@@ -195,10 +207,6 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
-    <Page Include="Resource\UI\Tuners\GuitarTuner.xaml">
-      <SubType>Designer</SubType>
-      <Generator>MSBuild:Compile</Generator>
-    </Page>
     <Page Include="Windows\MetronomeWin.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
@@ -223,12 +231,12 @@
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
       <SubType>Designer</SubType>
     </EmbeddedResource>
-    <EntityDeploy Include="DataBase\GuitaerHelperDBModel.edmx">
+    <EntityDeploy Include="DataBase\GuitarHelperDBModel.edmx">
       <Generator>EntityModelCodeGenerator</Generator>
-      <LastGenOutput>GuitaerHelperDBModel.Designer.cs</LastGenOutput>
+      <LastGenOutput>GuitarHelperDBModel.Designer.cs</LastGenOutput>
     </EntityDeploy>
-    <None Include="DataBase\GuitaerHelperDBModel.edmx.diagram">
-      <DependentUpon>GuitaerHelperDBModel.edmx</DependentUpon>
+    <None Include="DataBase\GuitarHelperDBModel.edmx.diagram">
+      <DependentUpon>GuitarHelperDBModel.edmx</DependentUpon>
     </None>
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
@@ -242,20 +250,36 @@
   <ItemGroup>
     <Folder Include="Resource\Lib\Classes\IInterfaces\" />
     <Folder Include="Resource\Lib\Librares\" />
+    <Folder Include="Resource\Pages\Lessons\" />
+    <Folder Include="Resource\Sounds\Chords\" />
   </ItemGroup>
   <ItemGroup>
     <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="DataBase\GuitaerHelperDBModel.Context.tt">
-      <Generator>TextTemplatingFileGenerator</Generator>
-      <DependentUpon>GuitaerHelperDBModel.edmx</DependentUpon>
-      <LastGenOutput>GuitaerHelperDBModel.Context.cs</LastGenOutput>
+    <Content Include="DataBase\GuitarHelperDB.mdf">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
-    <Content Include="DataBase\GuitaerHelperDBModel.tt">
+    <Content Include="DataBase\GuitarHelperDBModel.Context.tt">
       <Generator>TextTemplatingFileGenerator</Generator>
-      <DependentUpon>GuitaerHelperDBModel.edmx</DependentUpon>
-      <LastGenOutput>GuitaerHelperDBModel.cs</LastGenOutput>
+      <DependentUpon>GuitarHelperDBModel.edmx</DependentUpon>
+      <LastGenOutput>GuitarHelperDBModel.Context.cs</LastGenOutput>
+    </Content>
+    <Content Include="DataBase\GuitarHelperDBModel.tt">
+      <Generator>TextTemplatingFileGenerator</Generator>
+      <DependentUpon>GuitarHelperDBModel.edmx</DependentUpon>
+      <LastGenOutput>GuitarHelperDBModel.cs</LastGenOutput>
+    </Content>
+    <Content Include="DataBase\GuitarHelperDB_log.ldf">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      <DependentUpon>GuitarHelperDB.mdf</DependentUpon>
+    </Content>
+    <Content Include="GuitarHelperDB.mdf">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="GuitarHelperDB_log.ldf">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      <DependentUpon>GuitarHelperDB.mdf</DependentUpon>
     </Content>
     <Content Include="Resource\Sounds\HighTick.wav" />
     <Content Include="Resource\Sounds\LowTick.wav" />
@@ -328,6 +352,18 @@
     <Resource Include="Resource\Pictures\Avatars\NoAvatar.png" />
     <Resource Include="Resource\Pictures\Unfavorite.png" />
     <Resource Include="Resource\Pictures\Favorite.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <BootstrapperPackage Include=".NETFramework,Version=v4.7.2">
+      <Visible>False</Visible>
+      <ProductName>Microsoft .NET Framework 4.7.2 %28x86 и x64%29</ProductName>
+      <Install>true</Install>
+    </BootstrapperPackage>
+    <BootstrapperPackage Include="Microsoft.Net.Framework.3.5.SP1">
+      <Visible>False</Visible>
+      <ProductName>.NET Framework 3.5 SP1</ProductName>
+      <Install>false</Install>
+    </BootstrapperPackage>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
